<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_woodasvg"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/anne"
        app:srcCompat="@drawable/schoolbeta"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_below="@+id/anne"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/anne">

            <TextView
                android:id="@+id/annexplore"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/ann_explore"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/annexplore"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backii"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/leaf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leaf"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/b"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backii"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/timeb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/c"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backii"
                android:orientation="horizontal"
                android:padding="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/anntalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/d"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/ann_talk"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/anntalk"
                android:text="@string/call_paul" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/com"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agent\:" />

                <TextView
                    android:id="@+id/pooo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="Paule Poles"
                    android:textIsSelectable="true" />
                <TextView
                    android:id="@+id/polescontact"
                    android:layout_marginLeft="20dp"
                    android:text="+2348138537312"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>